[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/scenes/scene_one/Scene1FrontGround.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/scene_one/Scene1Background.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/scene_one/Scene1MidGround.png" type="Texture" id=3]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/scenes/Scene_One.gd" type="Script" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.375, 72.5 )

[node name="Scene_One" type="Node2D"]
script = ExtResource( 5 )

[node name="YSort" type="YSort" parent="."]
position = Vector2( 0, 3 )

[node name="Ceiling" type="StaticBody2D" parent="YSort" groups=["can_hook"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/Ceiling"]
position = Vector2( -16.1, -112.2 )
polygon = PoolVector2Array( 880.1, 32.2, 82.1, 34.2, 82.1, 26.2, 880.1, 26.2 )

[node name="Floor" type="StaticBody2D" parent="YSort"]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="YSort/Floor"]
position = Vector2( -16, -112 )
polygon = PoolVector2Array( 880, 455, 149, 455, 149, 424, 118, 423, 106, 413, 106, 293, 87, 288, 86, 172, 76, 162, 55, 167, 53, 157, 74, 150, 73, 134, 40, 127, 16, 127, 16, 112, 47, 112, 47, 109, 880, 110 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="YSort"]

[node name="BackgroundParallaxLayer" type="ParallaxLayer" parent="YSort/ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.3 )

[node name="Background" type="Sprite" parent="YSort/ParallaxBackground/BackgroundParallaxLayer"]
position = Vector2( -474, -317 )
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="Midground" type="Sprite" parent="YSort"]
position = Vector2( -16, -107 )
texture = ExtResource( 3 )
centered = false

[node name="Player" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 64, -24 )

[node name="Frontground" type="Sprite" parent="YSort"]
position = Vector2( -156, -257 )
z_index = 5
texture = ExtResource( 1 )
centered = false

[node name="SceneChange" type="Node2D" parent="."]
z_index = 5

[node name="ColorRect" type="ColorRect" parent="SceneChange"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1654.0
margin_top = -1237.0
margin_right = 2346.0
margin_bottom = 2763.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SceneChange"]
root_node = NodePath("../ColorRect")
anims/RESET = SubResource( 2 )
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[node name="Next_Scene" type="Area2D" parent="SceneChange"]
position = Vector2( -83, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneChange/Next_Scene"]
position = Vector2( 396.625, -70.5 )
shape = SubResource( 1 )

[connection signal="animation_finished" from="SceneChange/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="SceneChange/Next_Scene" to="." method="_on_Next_Scene_body_entered"]
